--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -7,6 +7,11 @@
   line-height: 1.192;
   letter-spacing: 0.03em;
   text-decoration: none;
+
+  @media screen and (max-width: 480px) {
+    font-size: 24px;
+    line-height: 1.166px;
+  }
 }
 .logo {
   margin-right: 45px;
