--- a/sass/components/_section.scss
+++ b/sass/components/_section.scss
@@ -8,10 +8,26 @@ section {
   & li {
     list-style: none;
   }
+  @media screen and (max-width: 480px) {
+    padding-bottom: 0;
+  }
 }
 .section-features {
   display: flex;
   justify-content: space-between;
+  @media screen and (max-width: 480px) {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+}
+.background {
+  width: 270px;
+  height: 120px;
+  background-color: var(--bacground-secondary);
+  @media screen and (max-width: 480px) {
+    width: 450px;
+  }
 }
 .icons-items {
   display: flex;
@@ -30,9 +46,19 @@ section {
   padding-top: 30px;
   padding-bottom: 10px;
   margin-top: 0;
+  @media screen and (max-width: 480px) {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: auto;
+  }
 }
 .selection-text {
   width: 270px;
+  @media screen and (max-width: 480px) {
+    width: auto;
+    padding-bottom: 30px;
+  }
 }
 .section-title {
   font-weight: 700;
@@ -43,4 +69,7 @@ section {
   color: var(--primary-text-color);
   margin-top: 0;
   padding-bottom: 50px;
+  @media screen and (max-width: 480px) {
+    display: none;
+  }
 }
