--- a/sass/components/_works.scss
+++ b/sass/components/_works.scss
@@ -1,11 +1,17 @@
 .img-works {
   display: flex;
   justify-content: space-between;
+  @media screen and (max-width: 480px) {
+    display: none;
+  }
 }
 .works-items {
   display: flex;
   position: relative;
   align-items: flex-end;
+  @media screen and (max-width: 480px) {
+    display: none;
+  }
 }
 .img-works-title {
   background: rgba(47, 48, 58, 0.8);
@@ -18,6 +24,9 @@
   position: absolute;
   width: 100%;
   padding: 27px 0;
+  @media screen and (max-width: 480px) {
+    display: none;
+  }
 }
 .center {
   text-align: center;
