--- a/sass/layout/_header-page.scss
+++ b/sass/layout/_header-page.scss
@@ -10,6 +10,7 @@
   display: flex;
   align-items: center;
 }
+
 .site-nav {
   display: initial;
   position: relative;
@@ -30,6 +31,9 @@
     &:focus {
       color: var(--accent-color);
     }
+  }
+  @media screen and (max-width: 480px) {
+    display: none;
   }
 }
 .site-nav::after {
@@ -97,5 +101,8 @@
   &:hover,
   &:focus {
     color: var(--accent-color);
+  }
+  @media screen and (max-width: 480px) {
+    display: none;
   }
 }
