--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -12,12 +12,29 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+  @media screen and (max-width: 480px) {
+    max-width: 480px;
+    min-height: 400px;
+    background-image: linear-gradient(
+        to right,
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url(../img/bgmobile.jpg);
+    background-position: inherit;
+    background-size: contain;
+  }
 }
 .hero {
   text-align: center;
   margin: 0;
   padding-bottom: 200px;
   padding-top: 200px;
+  @media screen and (max-width: 480px) {
+    display: flex;
+    margin: 0;
+    padding: 0;
+  }
 }
 .hero-title {
   margin: 0;
@@ -28,4 +45,12 @@
   text-transform: uppercase;
   color: var(--white-color);
   padding-bottom: 30px;
+  @media screen and (max-width: 480px) {
+    font-weight: 900;
+    font-size: 26px;
+    line-height: 1.615;
+    letter-spacing: 0.06em;
+    text-transform: uppercase;
+    padding: 118px 30px 30px;
+  }
 }
