--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -7,6 +7,9 @@
   display: flex;
   justify-content: space-between;
   padding-bottom: 95px;
+  @media screen and (max-width: 480px) {
+    display: inline-block;
+  }
 }
 .section-title-names,
 .section-title-position {
@@ -30,6 +33,9 @@
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
+  @media screen and (max-width: 480px) {
+    margin: 30px 0;
+  }
 }
 .decoration-no {
   text-decoration: none;
