--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -22,7 +22,19 @@
       ),
       url(../img/bgmobile.jpg);
     background-position: inherit;
-    background-size: contain;
+    background-size: cover;
+  }
+  @media screen and (min-width: 768px) {
+    min-width: 768px;
+    min-height: 400px;
+    background-image: linear-gradient(
+        to right,
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url(../img/bgtablet.jpg);
+    background-position: inherit;
+    background-size: cover;
   }
 }
 .hero {
@@ -52,5 +64,19 @@
     letter-spacing: 0.06em;
     text-transform: uppercase;
     padding: 118px 30px 30px;
+  }
+}
+@media screen and (min-device-pixel-ratio: 2),
+  screen and (-webkit-min-device-pixel-ratio: 2),
+  screen and (-o-min-device-pixel-ratio: 2/1),
+  screen and (min-resolution: 192dpi),
+  screen and (min-resolution: 2dppx) {
+  .overlay {
+    background-image: linear-gradient(
+        to right,
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url(../img/bgmobile@2x.jpg);
   }
 }
