--- a/css/main.css
+++ b/css/main.css
@@ -529,38 +529,12 @@ p {
   text-decoration: none;
 }
 
-@media screen and (max-width: 480px) {
-  .logo,
-  .logo-footer {
-    font-size: 24px;
-    line-height: 1.166px;
-  }
-}
-
-.logo {
-  margin-right: 45px;
-}
-
-@media screen and (max-width: 768px) {
-  .logo {
-    margin-right: 80px;
-  }
-}
-
-.logo span {
-  color: var(--accent-color);
-}
-
-.logo-footer {
-  color: var(--white-color);
-}
-
 section {
   color: var(--title-text-color);
   font-size: 14px;
   line-height: 1.714;
   letter-spacing: 0.03em;
-  padding-top: 95px;
+  padding-top: 45px;
   padding-bottom: 95px;
 }
 
@@ -568,36 +542,17 @@ section li {
   list-style: none;
 }
 
-@media screen and (max-width: 480px) {
-  section {
-    padding-top: 60px;
-    padding-bottom: 0;
-  }
-}
-
 .section-features {
   display: flex;
-  justify-content: space-between;
-}
-
-@media screen and (max-width: 480px) {
-  .section-features {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
+  flex-direction: column;
+  align-items: center;
 }
 
 .background {
-  width: 270px;
+  width: 100%;
   height: 120px;
   background-color: var(--bacground-secondary);
-}
-
-@media screen and (max-width: 480px) {
-  .background {
-    width: 450px;
-  }
+  margin-top: 30px;
 }
 
 .icons-items {
@@ -609,7 +564,10 @@ section li {
 }
 
 .section-title-features {
-  width: 270px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: 480px;
   color: var(--primary-text-color);
   font-weight: 700;
   font-size: 14px;
@@ -618,26 +576,6 @@ section li {
   padding-top: 30px;
   padding-bottom: 10px;
   margin-top: 0;
-}
-
-@media screen and (max-width: 480px) {
-  .section-title-features {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: auto;
-  }
-}
-
-.selection-text {
-  width: 270px;
-}
-
-@media screen and (max-width: 480px) {
-  .selection-text {
-    width: auto;
-    padding-bottom: 30px;
-  }
 }
 
 .section-title {
@@ -649,12 +587,6 @@ section li {
   color: var(--primary-text-color);
   margin-top: 0;
   padding-bottom: 50px;
-}
-
-@media screen and (max-width: 480px) {
-  .mobile-no-text {
-    display: none;
-  }
 }
 
 .img-works {
