--- a/sass/components/_section.scss
+++ b/sass/components/_section.scss
@@ -3,34 +3,22 @@ section {
   font-size: 14px;
   line-height: 1.714;
   letter-spacing: 0.03em;
-  padding-top: 95px;
+  padding-top: 45px;
   padding-bottom: 95px;
   & li {
     list-style: none;
   }
-  @media screen and (max-width: 480px) {
-    padding-top: 60px;
-    padding-bottom: 0;
-  }
-  @media screen and (max-width: 768px) {
-  }
 }
 .section-features {
   display: flex;
-  justify-content: space-between;
-  @media screen and (max-width: 480px) {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
+  flex-direction: column;
+  align-items: center;
 }
 .background {
-  width: 270px;
+  width: 100%;
   height: 120px;
   background-color: var(--bacground-secondary);
-  @media screen and (max-width: 480px) {
-    width: 450px;
-  }
+  margin-top: 30px;
 }
 .icons-items {
   display: flex;
@@ -40,7 +28,10 @@ section {
   background-size: 270px 120px;
 }
 .section-title-features {
-  width: 270px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: 480px;
   color: var(--primary-text-color);
   font-weight: 700;
   font-size: 14px;
@@ -49,19 +40,6 @@ section {
   padding-top: 30px;
   padding-bottom: 10px;
   margin-top: 0;
-  @media screen and (max-width: 480px) {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: auto;
-  }
-}
-.selection-text {
-  width: 270px;
-  @media screen and (max-width: 480px) {
-    width: auto;
-    padding-bottom: 30px;
-  }
 }
 .section-title {
   font-weight: 700;
@@ -73,8 +51,84 @@ section {
   margin-top: 0;
   padding-bottom: 50px;
 }
-@media screen and (max-width: 480px) {
-  .mobile-no-text {
-    display: none;
-  }
-}
+
+// section {
+//   color: var(--title-text-color);
+//   font-size: 14px;
+//   line-height: 1.714;
+//   letter-spacing: 0.03em;
+//   padding-top: 95px;
+//   padding-bottom: 95px;
+//   & li {
+//     list-style: none;
+//   }
+//   @media screen and (max-width: 480px) {
+//     padding-top: 60px;
+//     padding-bottom: 0;
+//   }
+//   @media screen and (max-width: 768px) {
+//   }
+// }
+// .section-features {
+//   display: flex;
+//   justify-content: space-between;
+//   @media screen and (max-width: 480px) {
+//     display: flex;
+//     flex-direction: column;
+//     align-items: center;
+//   }
+// }
+// .background {
+//   width: 270px;
+//   height: 120px;
+//   background-color: var(--bacground-secondary);
+//   @media screen and (min-width: 480px) {
+//     width: 480px;
+//   }
+// }
+// .icons-items {
+//   display: flex;
+//   margin: auto;
+//   height: 120px;
+//   background-color: var(--bacground-secondary);
+//   background-size: 270px 120px;
+// }
+// .section-title-features {
+//   width: 270px;
+//   color: var(--primary-text-color);
+//   font-weight: 700;
+//   font-size: 14px;
+//   line-height: 1.142;
+//   text-transform: uppercase;
+//   padding-top: 30px;
+//   padding-bottom: 10px;
+//   margin-top: 0;
+//   @media screen and (max-width: 480px) {
+//     display: flex;
+//     flex-direction: column;
+//     align-items: center;
+//     width: auto;
+//   }
+// }
+// .selection-text {
+//   width: 270px;
+//   @media screen and (max-width: 480px) {
+//     width: auto;
+//     padding-bottom: 30px;
+//   }
+// }
+// .section-title {
+//   font-weight: 700;
+//   font-size: 36px;
+//   line-height: 1.166;
+//   text-align: center;
+//   letter-spacing: 0.03em;
+//   color: var(--primary-text-color);
+//   margin-top: 0;
+//   padding-bottom: 50px;
+// }
+// @media screen and (max-width: 480px) {
+//   .mobile-no-text {
+//     display: none;
+//   }
+// }
