--- a/css/main.css
+++ b/css/main.css
@@ -333,6 +333,23 @@ p {
   padding-bottom: 60px;
 }
 
+.footer-container {
+  display: flex;
+  flex-direction: column;
+}
+
+.footer-container-list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.footer-container-items {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .footer-contacts {
   font-size: 14px;
   line-height: 1.714;
@@ -367,7 +384,6 @@ p {
 .footer-icons {
   display: flex;
   list-style: none;
-  margin-left: 70px;
 }
 
 .footer-container-list {
@@ -404,20 +420,28 @@ p {
   background-color: var(--accent-color);
 }
 
+.footer-social-icons-mobile {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 60px;
+}
+
 /* Форма футера */
 .footer-form {
-  margin-left: 93px;
   font-weight: bold;
   font-size: 14px;
   line-height: 16px;
   letter-spacing: 0.875;
   text-transform: uppercase;
   color: var(--white-color);
+  margin-top: 60px;
 }
 
 .form-field {
   display: flex;
   flex-direction: column;
+  align-items: center;
   padding-top: 15px;
   font-weight: bold;
   font-size: 14px;
@@ -428,6 +452,7 @@ p {
 
 .form-field-imput {
   display: flex;
+  flex-direction: column;
   align-items: center;
   padding-top: 20px;
 }
@@ -437,13 +462,14 @@ p {
   box-sizing: border-box;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
-  width: 340px;
+  width: 400px;
   height: 50px;
   background: transparent;
   padding-left: 16px;
-  margin-right: 10px;
   color: var(--white-color);
   outline: none;
+  margin-bottom: 20px;
+  margin-top: 20px;
 }
 
 .telegramm-icon {
@@ -529,13 +555,21 @@ p {
   text-decoration: none;
 }
 
+.logo span {
+  color: var(--accent-color);
+}
+
+.logo-footer {
+  color: var(--white-color);
+}
+
 section {
   color: var(--title-text-color);
   font-size: 14px;
   line-height: 1.714;
   letter-spacing: 0.03em;
   padding-top: 45px;
-  padding-bottom: 95px;
+  padding-bottom: 35px;
 }
 
 section li {
@@ -580,8 +614,8 @@ section li {
 
 .section-title {
   font-weight: 700;
-  font-size: 36px;
-  line-height: 1.166;
+  font-size: 28px;
+  line-height: 1.178;
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--primary-text-color);
@@ -589,72 +623,29 @@ section li {
   padding-bottom: 50px;
 }
 
-.img-works {
-  display: flex;
-  justify-content: space-between;
-}
-
-@media screen and (max-width: 480px) {
-  .img-works {
-    display: none;
-  }
-}
-
 .works-items {
-  display: flex;
-  position: relative;
-  align-items: flex-end;
+  display: none;
 }
 
-@media screen and (max-width: 480px) {
-  .works-items {
-    display: none;
-  }
-}
-
-.img-works-title {
-  background: rgba(47, 48, 58, 0.8);
-  text-transform: uppercase;
-  color: var(--white-color);
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 0.857;
-  text-align: center;
-  position: absolute;
-  width: 100%;
-  padding: 27px 0;
-}
-
-@media screen and (max-width: 480px) {
-  .img-works-title {
-    display: none;
-  }
-}
-
-.center {
-  text-align: center;
+.mobile-no-text {
+  display: none;
 }
 
 .team {
   background-color: var(--bacground-secondary);
   margin-bottom: 0;
-  padding-top: 95px;
 }
 
 .section-names {
-  display: flex;
-  justify-content: space-between;
-  padding-bottom: 95px;
-}
-
-@media screen and (max-width: 480px) {
-  .section-names {
-    display: inline-block;
-  }
+  display: block;
+  padding-bottom: 60px;
 }
 
 .section-title-names,
 .section-title-position {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   color: var(--primary-text-color);
   font-weight: 500;
   font-size: 16px;
@@ -664,6 +655,9 @@ section li {
 
 .section-title-name-position {
   padding: 30px 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .section-title-position {
@@ -677,12 +671,7 @@ section li {
   background: var(--white-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
-}
-
-@media screen and (max-width: 480px) {
-  .section-names-shadow {
-    margin: 30px 0;
-  }
+  margin-bottom: 60px;
 }
 
 .decoration-no {
@@ -708,8 +697,14 @@ section li {
   fill: var(--white-color);
 }
 
+.social-icons-mob {
+  display: block;
+}
+
 .clients {
   display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 .clients-button {
@@ -721,6 +716,7 @@ section li {
   border: 1px solid #afb1b8;
   border-radius: 4px;
   margin-right: 30px;
+  margin-bottom: 30px;
   background: transparent;
   cursor: pointer;
   transition-property: border;
@@ -730,6 +726,10 @@ section li {
 
 .clients-button:hover, .clients-button:focus {
   border-color: var(--accent-color);
+}
+
+.clients-button:not(:last-child) {
+  margin-right: 30px;
 }
 
 .clients-icons {
