--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -8,6 +8,12 @@
   letter-spacing: 0.03em;
   text-decoration: none;
 }
+.logo span {
+  color: var(--accent-color);
+}
+.logo-footer {
+  color: var(--white-color);
+}
 
 //   @media screen and (max-width: 480px) {
 //     font-size: 24px;
