--- a/sass/components/_works.scss
+++ b/sass/components/_works.scss
@@ -1,33 +1,40 @@
-.img-works {
-  display: flex;
-  justify-content: space-between;
-  @media screen and (max-width: 480px) {
-    display: none;
-  }
-}
 .works-items {
-  display: flex;
-  position: relative;
-  align-items: flex-end;
-  @media screen and (max-width: 480px) {
-    display: none;
-  }
+  display: none;
 }
-.img-works-title {
-  background: rgba(47, 48, 58, 0.8);
-  text-transform: uppercase;
-  color: var(--white-color);
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 0.857;
-  text-align: center;
-  position: absolute;
-  width: 100%;
-  padding: 27px 0;
-  @media screen and (max-width: 480px) {
-    display: none;
-  }
+.mobile-no-text {
+  display: none;
 }
-.center {
-  text-align: center;
-}
+
+// .img-works {
+//   display: flex;
+//   justify-content: space-between;
+//   @media screen and (max-width: 480px) {
+//     display: none;
+//   }
+// }
+// .works-items {
+//   display: flex;
+//   position: relative;
+//   align-items: flex-end;
+//   @media screen and (max-width: 480px) {
+//     display: none;
+//   }
+// }
+// .img-works-title {
+//   background: rgba(47, 48, 58, 0.8);
+//   text-transform: uppercase;
+//   color: var(--white-color);
+//   font-weight: 700;
+//   font-size: 14px;
+//   line-height: 0.857;
+//   text-align: center;
+//   position: absolute;
+//   width: 100%;
+//   padding: 27px 0;
+//   @media screen and (max-width: 480px) {
+//     display: none;
+//   }
+// }
+// .center {
+//   text-align: center;
+// }
