--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -2,11 +2,10 @@
   width: 100%;
   padding-left: 15px;
   padding-right: 15px;
-  margin-left: auto;
-  margin-right: auto;
+  margin-right: 0 auto;
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 0px) {
   .container {
     max-width: 480px;
     padding-left: 15px;
@@ -15,22 +14,14 @@
     margin-right: auto;
   }
 }
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 480px) {
   .container {
     max-width: 768px;
-    padding-left: 15px;
-    padding-right: 15px;
-    margin-left: auto;
-    margin-right: auto;
   }
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 768px) {
   .container {
     max-width: 1200px;
-    padding-left: 15px;
-    padding-right: 15px;
-    margin-left: auto;
-    margin-right: auto;
   }
 }
