--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -2,6 +2,10 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  @media screen and (min-width: 1200px) {
+    display: flex;
+    flex-wrap: nowrap;
+  }
 }
 .clients-button {
   display: flex;
@@ -23,6 +27,12 @@
   &:focus {
     border-color: var(--accent-color);
   }
+  @media screen and (min-width: 768px) {
+    width: 200px;
+  }
+  @media screen and (min-width: 1200px) {
+    width: 170px;
+  }
 }
 .clients-button:not(:last-child) {
   margin-right: 30px;
@@ -37,36 +47,38 @@
 .clients-button:focus .clients-icons {
   fill: var(--accent-color);
 }
-// .clients {
-//   display: flex;
-// }
-// .clients-button {
-//   display: flex;
-//   justify-content: center;
-//   align-items: center;
-//   width: 170px;
-//   height: 90px;
-//   border: 1px solid #afb1b8;
-//   border-radius: 4px;
-//   margin-right: 30px;
-//   background: transparent;
-//   cursor: pointer;
+@media screen and (max-width: 1200px) {
+  .clients {
+    display: flex;
+  }
+  .clients-button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 170px;
+    height: 90px;
+    border: 1px solid #afb1b8;
+    border-radius: 4px;
+    margin-right: 30px;
+    background: transparent;
+    cursor: pointer;
 
-//   transition-property: border;
-//   transition-duration: 250ms;
-//   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-//   &:hover,
-//   &:focus {
-//     border-color: var(--accent-color);
-//   }
-// }
-// .clients-icons {
-//   fill: var(--icons);
-//   transition-property: fill;
-//   transition-duration: 250ms;
-//   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-// }
-// .clients-button:hover .clients-icons,
-// .clients-button:focus .clients-icons {
-//   fill: var(--accent-color);
-// }
+    transition-property: border;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    &:hover,
+    &:focus {
+      border-color: var(--accent-color);
+    }
+  }
+  .clients-icons {
+    fill: var(--icons);
+    transition-property: fill;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .clients-button:hover .clients-icons,
+  .clients-button:focus .clients-icons {
+    fill: var(--accent-color);
+  }
+}
