--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -12,7 +12,7 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  @media screen and (max-width: 480px) {
+  @media screen and (max-width: 768px) {
     max-width: 480px;
     min-height: 400px;
     background-image: linear-gradient(
@@ -34,6 +34,21 @@
       ),
       url(../img/bgtablet.jpg);
     background-position: inherit;
+    background-size: cover;
+  }
+  @media screen and (min-width: 1200px) {
+    max-width: 1600px;
+    min-height: 600px;
+    margin-left: auto;
+    margin-right: auto;
+    background-image: linear-gradient(
+        to right,
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url(../img/bg.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
     background-size: cover;
   }
 }
@@ -58,19 +73,21 @@
   color: var(--white-color);
   padding-bottom: 30px;
   @media screen and (max-width: 480px) {
-    font-weight: 900;
     font-size: 26px;
     line-height: 1.615;
-    letter-spacing: 0.06em;
-    text-transform: uppercase;
     padding: 118px 30px 30px;
   }
+  @media screen and (min-width: 481px) and (max-width: 1200px) {
+    font-size: 26px;
+    line-height: 1.615;
+  }
 }
+
 @media screen and (min-device-pixel-ratio: 2),
-  screen and (-webkit-min-device-pixel-ratio: 2),
-  screen and (-o-min-device-pixel-ratio: 2/1),
-  screen and (min-resolution: 192dpi),
-  screen and (min-resolution: 2dppx) {
+  screen and (-webkit-min-device-pixel-ratio: 2) and (min-width: 320px),
+  screen and (-o-min-device-pixel-ratio: 2/1) and (min-width: 320px),
+  screen and (min-resolution: 192dpi) and (min-width: 320px),
+  screen and (min-resolution: 2dppx) and (min-width: 320px) {
   .overlay {
     background-image: linear-gradient(
         to right,
