--- a/css/main.css
+++ b/css/main.css
@@ -35,9 +35,9 @@ p {
   }
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 320px) and (max-width: 1200px) {
   .container {
-    max-width: 768px;
+    margin: 10px 0;
   }
 }
 
@@ -167,7 +167,7 @@ p {
     display: initial;
     position: relative;
     padding-top: 25px;
-    padding-bottom: 29px;
+    padding-bottom: 34px;
     left: 0;
     bottom: 0;
     margin-left: 50px;
@@ -641,6 +641,13 @@ p {
   padding-left: 0;
 }
 
+@media screen and (max-width: 480px) {
+  .button-portfolio {
+    display: flex;
+    flex-wrap: wrap;
+  }
+}
+
 .button-portfolio-item {
   background-color: var(--button-bgr);
   border-radius: 4px;
@@ -671,8 +678,20 @@ p {
   justify-content: center;
 }
 
+@media screen and (max-width: 480px) {
+  .button-portfolio {
+    justify-content: end;
+  }
+}
+
 .button-portfolio .item + .item {
   margin-left: 8px;
+}
+
+@media screen and (max-width: 480px) {
+  .button-portfolio .item + .item {
+    margin: 0 8px 8px 0;
+  }
 }
 
 .btn-center {
@@ -1131,11 +1150,27 @@ section li {
   }
 }
 
+.portfolio-img-sizes {
+  width: 100%;
+}
+
 .portfolio-works {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: center;
   list-style: none;
+}
+
+@media screen and (min-width: 768px) {
+  .portfolio-works {
+    justify-content: space-between;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .portfolio-works {
+    justify-content: space-around;
+  }
 }
 
 .portfolio-img-title {
@@ -1210,6 +1245,18 @@ section li {
 .outline:hover {
   cursor: pointer;
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
+@media screen and (min-width: 768px) {
+  .outline {
+    max-width: 350px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .outline {
+    max-width: 370px;
+  }
 }
 
 .no-margin-bottom {
