--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -14,9 +14,9 @@
     margin-right: auto;
   }
 }
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 320px) and (max-width: 1200px) {
   .container {
-    max-width: 768px;
+    margin: 10px 0;
   }
 }
 
