--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -1,8 +1,17 @@
+.portfolio-img-sizes {
+  width: 100%;
+}
 .portfolio-works {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: center;
   list-style: none;
+  @media screen and (min-width: 768px) {
+    justify-content: space-between;
+  }
+  @media screen and (min-width: 1024px) {
+    justify-content: space-around;
+  }
 }
 .portfolio-img-title {
   background: rgba(33, 150, 243, 0.9);
@@ -70,6 +79,12 @@
     cursor: pointer;
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
       1px 4px 6px rgba(0, 0, 0, 0.16);
+  }
+  @media screen and (min-width: 768px) {
+    max-width: 350px;
+  }
+  @media screen and (min-width: 1200px) {
+    max-width: 370px;
   }
 }
 
