--- a/css/main.css
+++ b/css/main.css
@@ -85,6 +85,12 @@ p {
   border-bottom: 1px solid #ececec;
 }
 
+@media screen and (max-width: 480px) {
+  .header {
+    position: relative;
+  }
+}
+
 @media screen and (min-width: 768px) {
   .site-nav {
     display: initial;
@@ -147,6 +153,114 @@ p {
   .main-nav-center-tab {
     display: flex;
     align-items: center;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .menu-button {
+    display: flex;
+    width: 40px;
+    height: 40px;
+    align-items: center;
+    border: none;
+    background: transparent;
+  }
+  .menu-button .icon-cross {
+    display: none;
+  }
+  .menu-button.is-open .icon-cross {
+    display: block;
+  }
+  .menu-button.is-open .icon-menu {
+    display: none;
+  }
+  .main-nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .menu-container {
+    display: none;
+    position: absolute;
+    width: 100%;
+    height: 453px;
+    top: 100%;
+    left: 0;
+    background-color: #fff;
+    text-align: center;
+    font-size: 20px;
+  }
+  .menu-container.is-open {
+    display: block;
+  }
+  .menu-container.is-open {
+    display: block;
+    border: 1px solid #ececec;
+  }
+  .menu-container.is-open .header-site-nav-tablet {
+    display: block;
+  }
+  .menu-container.is-open .site-nav {
+    display: block;
+    padding-top: 60px;
+    left: 0;
+    bottom: 0;
+  }
+  .menu-container.is-open .site-nav a {
+    color: var(--primary-text-color);
+    text-decoration: none;
+    font-weight: 500;
+    margin: 0;
+    transition-property: color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .menu-container.is-open .site-nav a:hover, .menu-container.is-open .site-nav a:focus {
+    color: var(--accent-color);
+  }
+  .menu-container.is-open .header-mail-tel {
+    display: block;
+    align-items: center;
+    font-weight: 500;
+    list-style: none;
+    padding: 0;
+    margin: 60px 0;
+  }
+  .menu-container.is-open .header-center {
+    display: block;
+    align-items: center;
+  }
+  .menu-container.is-open .link-icons-header:hover .icon-contacts-header,
+  .menu-container.is-open .link-icons-header:focus .icon-contacts-header {
+    fill: var(--accent-color);
+  }
+  .menu-container.is-open .site-nav .item {
+    list-style: none;
+    margin-left: 90px;
+  }
+  .menu-container.is-open .icon-contacts-header {
+    fill: var(--title-text-color);
+    margin-right: 10px;
+    transition-property: fill;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .menu-container.is-open .link-icons-header {
+    color: var(--title-text-color);
+    text-decoration: none;
+    transition-property: color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    padding-bottom: 20px;
+  }
+  .menu-container.is-open .link-icons-header:hover, .menu-container.is-open .link-icons-header:focus {
+    color: var(--accent-color);
+  }
+}
+
+@media screen and (min-width: 481px) {
+  .menu-button {
+    display: none;
   }
 }
 
@@ -1311,6 +1425,13 @@ section li {
   fill: var(--accent-color);
 }
 
+@media screen and (max-width: 480px) {
+  .close-btn {
+    top: 15px;
+    right: 35px;
+  }
+}
+
 .is-hidden {
   opacity: 0;
   visibility: hidden;
@@ -1410,10 +1531,22 @@ section li {
   letter-spacing: 0.03em;
 }
 
+@media screen and (max-width: 480px) {
+  .form-modal span {
+    display: block;
+  }
+}
+
 .form-modal button {
   display: block;
   align-self: center;
   width: 200px;
+}
+
+@media screen and (max-width: 480px) {
+  .form-modal {
+    padding: 40px 80px;
+  }
 }
 
 .form-modal input:focus + .form-modal-icons {
