--- a/sass/layout/_header-page.scss
+++ b/sass/layout/_header-page.scss
@@ -9,6 +9,9 @@
   padding-top: 5px;
   padding-bottom: 5px;
   border-bottom: 1px solid #ececec;
+  @media screen and (max-width: 480px) {
+    position: relative;
+  }
 }
 @media screen and (min-width: 768px) {
   .site-nav {
@@ -74,6 +77,117 @@
   .main-nav-center-tab {
     display: flex;
     align-items: center;
+  }
+}
+@media screen and (max-width: 480px) {
+  .menu-button {
+    display: flex;
+    width: 40px;
+    height: 40px;
+    align-items: center;
+    border: none;
+    background: transparent;
+  }
+
+  .menu-button .icon-cross {
+    display: none;
+  }
+  .menu-button.is-open .icon-cross {
+    display: block;
+  }
+  .menu-button.is-open .icon-menu {
+    display: none;
+  }
+
+  .main-nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .menu-container {
+    display: none;
+
+    position: absolute;
+    width: 100%;
+    height: 453px;
+    top: 100%;
+    left: 0;
+    background-color: #fff;
+    text-align: center;
+    font-size: 20px;
+    &.is-open {
+      display: block;
+    }
+  }
+  .menu-container.is-open {
+    display: block;
+    border: 1px solid #ececec;
+    .header-site-nav-tablet {
+      display: block;
+    }
+    .site-nav {
+      display: block;
+      padding-top: 60px;
+      left: 0;
+      bottom: 0;
+      & a {
+        color: var(--primary-text-color);
+        text-decoration: none;
+        font-weight: 500;
+        margin: 0;
+        transition-property: color;
+        transition-duration: 250ms;
+        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+        &:hover,
+        &:focus {
+          color: var(--accent-color);
+        }
+      }
+    }
+    .header-mail-tel {
+      display: block;
+      align-items: center;
+      font-weight: 500;
+      list-style: none;
+      padding: 0;
+      margin: 60px 0;
+    }
+    .header-center {
+      display: block;
+      align-items: center;
+    }
+    .link-icons-header:hover .icon-contacts-header,
+    .link-icons-header:focus .icon-contacts-header {
+      fill: var(--accent-color);
+    }
+    .site-nav .item {
+      list-style: none;
+      margin-left: 90px;
+    }
+    .icon-contacts-header {
+      fill: var(--title-text-color);
+      margin-right: 10px;
+      transition-property: fill;
+      transition-duration: 250ms;
+      transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    }
+    .link-icons-header {
+      color: var(--title-text-color);
+      text-decoration: none;
+      transition-property: color;
+      transition-duration: 250ms;
+      transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+      padding-bottom: 20px;
+      &:hover,
+      &:focus {
+        color: var(--accent-color);
+      }
+    }
+  }
+}
+@media screen and (min-width: 481px) {
+  .menu-button {
+    display: none;
   }
 }
 @media screen and (min-width: 1200px) {
