--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -66,6 +66,9 @@
   position: relative;
   display: flex;
   overflow: hidden;
+  @media screen and (max-width: 480px) {
+    position: inherit;
+  }
 }
 .outline {
   border: 1px solid #ececec;
