--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -13,6 +13,9 @@
     justify-content: space-around;
   }
 }
+.img-portfolio {
+  width: 100%;
+}
 .portfolio-img-title {
   background: rgba(33, 150, 243, 0.9);
   color: var(--white-color);
