--- a/sass/components/_section.scss
+++ b/sass/components/_section.scss
@@ -13,6 +13,7 @@ section {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-right: -30px;
 }
 
 @media screen and (min-width: 768px) {
@@ -76,6 +77,7 @@ section {
 
 @media screen and (min-width: 1200px) {
   section {
+    display: block;
     color: var(--title-text-color);
     font-size: 14px;
     line-height: 1.714;
