--- a/css/main.css
+++ b/css/main.css
@@ -35,7 +35,7 @@ p {
   }
 }
 
-@media screen and (min-width: 320px) and (max-width: 1200px) {
+@media screen and (min-width: 320px) and (max-width: 480px) {
   .container {
     margin: 10px 0;
   }
@@ -110,8 +110,28 @@ p {
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   }
-  .site-nav a:hover, .site-nav a:focus {
+  .site-nav a:hover,
+  .site-nav a:focus {
     color: var(--accent-color);
+  }
+  .site-nav:hover::after,
+  .site-nav:focus::after {
+    width: 100%;
+  }
+  .site-nav .item + .item {
+    margin-left: 40px;
+  }
+  .site-nav .item {
+    list-style: none;
+    margin-left: 90px;
+  }
+  .nav-border.current {
+    color: var(--accent-color);
+  }
+  .current {
+    border-bottom: solid 6px var(--accent-color);
+    padding-bottom: 32px;
+    width: 100%;
   }
   .header-site-nav-tablet {
     display: inline-block;
@@ -147,7 +167,8 @@ p {
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     padding-bottom: 10px;
   }
-  .link-icons-header:hover, .link-icons-header:focus {
+  .link-icons-header:hover,
+  .link-icons-header:focus {
     color: var(--accent-color);
   }
   .main-nav-center-tab {
@@ -216,7 +237,8 @@ p {
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   }
-  .menu-container.is-open .site-nav a:hover, .menu-container.is-open .site-nav a:focus {
+  .menu-container.is-open .site-nav a:hover,
+  .menu-container.is-open .site-nav a:focus {
     color: var(--accent-color);
   }
   .menu-container.is-open .header-mail-tel {
@@ -254,8 +276,28 @@ p {
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     padding-bottom: 20px;
   }
-  .menu-container.is-open .link-icons-header:hover, .menu-container.is-open .link-icons-header:focus {
+  .menu-container.is-open .link-icons-header:hover,
+  .menu-container.is-open .link-icons-header:focus {
     color: var(--accent-color);
+  }
+  .site-nav:hover::after,
+  .site-nav:focus::after {
+    width: 100%;
+  }
+  .site-nav .item + .item {
+    margin-left: 40px;
+  }
+  .site-nav .item {
+    list-style: none;
+    margin-left: 90px;
+  }
+  .nav-border.current {
+    color: var(--accent-color);
+  }
+  .current {
+    border-bottom: solid 6px var(--accent-color);
+    padding-bottom: 10px;
+    width: 100%;
   }
 }
 
@@ -296,7 +338,8 @@ p {
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   }
-  .site-nav a:hover, .site-nav a:focus {
+  .site-nav a:hover,
+  .site-nav a:focus {
     color: var(--accent-color);
   }
   .site-nav::after {
@@ -360,7 +403,8 @@ p {
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   }
-  .link-icons-header:hover, .link-icons-header:focus {
+  .link-icons-header:hover,
+  .link-icons-header:focus {
     color: var(--accent-color);
   }
 }
@@ -510,20 +554,20 @@ p {
   line-height: 1.714;
   letter-spacing: 0.03em;
   list-style: none;
-  padding-top: 20px;
+  margin-top: 20px;
 }
 
 .footer-address,
 .footer-address-mail-tel a {
   text-decoration: none;
   color: var(--white-color);
-  padding-bottom: 10px;
+  margin-bottom: 10px;
 }
 
 .footer-address-mail-tel a {
   color: var(--white-color);
   opacity: 60%;
-  padding-bottom: 10px;
+  margin-bottom: 10px;
 }
 
 .footer-address-mail-tel a:hover, .footer-address-mail-tel a:focus {
@@ -559,8 +603,8 @@ p {
   font-size: 14px;
   line-height: 1.142;
   text-transform: uppercase;
-  padding-top: 15px;
-  padding-bottom: 20px;
+  margin-top: 15px;
+  margin-bottom: 20px;
   letter-spacing: 0.03em;
 }
 
@@ -657,8 +701,8 @@ p {
     font-size: 14px;
     line-height: 1.142;
     text-transform: uppercase;
-    padding-top: 15px;
-    padding-bottom: 20px;
+    margin-top: 15px;
+    margin-bottom: 20px;
     letter-spacing: 0.03em;
   }
   .link-social-icons-footer {
@@ -850,6 +894,14 @@ section li {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-right: -15px;
+  margin-left: 15px;
+}
+
+@media screen and (max-width: 480px) {
+  .section-features {
+    margin: 0;
+  }
 }
 
 @media screen and (min-width: 768px) {
@@ -923,6 +975,7 @@ section li {
 
 @media screen and (min-width: 1200px) {
   section {
+    display: block;
     color: var(--title-text-color);
     font-size: 14px;
     line-height: 1.714;
@@ -1123,7 +1176,6 @@ section li {
   .section-names {
     display: flex;
     justify-content: space-between;
-    padding-bottom: 95px;
   }
   .section-title-names,
   .section-title-position {
@@ -1286,6 +1338,10 @@ section li {
   .portfolio-works {
     justify-content: space-around;
   }
+}
+
+.img-portfolio {
+  width: 100%;
 }
 
 .portfolio-img-title {
