--- a/sass/components/_section.scss
+++ b/sass/components/_section.scss
@@ -13,7 +13,11 @@ section {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-right: -30px;
+  margin-right: -15px;
+  margin-left: 15px;
+  @media screen and (max-width: 480px) {
+    margin: 0;
+  }
 }
 
 @media screen and (min-width: 768px) {
