--- a/sass/layout/_header-page.scss
+++ b/sass/layout/_header-page.scss
@@ -2,6 +2,7 @@
 .header-mail-tel {
   display: none;
 }
+
 .header {
   font-size: 14px;
   line-height: 1.142;
@@ -9,11 +10,56 @@
   padding-top: 5px;
   padding-bottom: 5px;
   border-bottom: 1px solid #ececec;
-  @media screen and (max-width: 480px) {
+}
+
+@media screen and (max-width: 480px) {
+  .header {
     position: relative;
   }
 }
+
 @media screen and (min-width: 768px) {
+  .site-nav {
+    display: initial;
+    position: relative;
+    padding-top: 25px;
+    padding-bottom: 29px;
+    left: 0;
+    bottom: 0;
+    margin-left: 50px;
+  }
+  .site-nav a {
+    color: var(--primary-text-color);
+    text-decoration: none;
+    font-weight: 500;
+    margin: 0;
+    transition-property: color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .site-nav a:hover,
+  .site-nav a:focus {
+    color: var(--accent-color);
+  }
+  .site-nav:hover::after,
+  .site-nav:focus::after {
+    width: 100%;
+  }
+  .site-nav .item + .item {
+    margin-left: 40px;
+  }
+  .site-nav .item {
+    list-style: none;
+    margin-left: 90px;
+  }
+  .nav-border.current {
+    color: var(--accent-color);
+  }
+  .current {
+    border-bottom: solid 6px var(--accent-color);
+    padding-bottom: 32px;
+    width: 100%;
+  }
   .header-site-nav-tablet {
     display: inline-block;
     margin-left: 15px;
@@ -22,11 +68,8 @@
     display: inline-block;
     align-items: center;
     font-weight: 500;
-    // margin-left: auto;
+    margin-left: auto;
     list-style: none;
-    @media screen and (min-width: 1024px) {
-      margin-left: auto;
-    }
   }
   .header-center {
     display: block;
@@ -50,16 +93,17 @@
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     padding-bottom: 10px;
-    &:hover,
-    &:focus {
-      color: var(--accent-color);
-    }
+  }
+  .link-icons-header:hover,
+  .link-icons-header:focus {
+    color: var(--accent-color);
   }
   .main-nav-center-tab {
     display: flex;
     align-items: center;
   }
 }
+
 @media screen and (max-width: 480px) {
   .menu-button {
     display: flex;
@@ -69,7 +113,6 @@
     border: none;
     background: transparent;
   }
-
   .menu-button .icon-cross {
     display: none;
   }
@@ -79,7 +122,6 @@
   .menu-button.is-open .icon-menu {
     display: none;
   }
-
   .main-nav {
     display: flex;
     justify-content: space-between;
@@ -87,7 +129,6 @@
   }
   .menu-container {
     display: none;
-
     position: absolute;
     width: 100%;
     height: 453px;
@@ -96,84 +137,104 @@
     background-color: #fff;
     text-align: center;
     font-size: 20px;
-    &.is-open {
-      display: block;
-    }
+  }
+  .menu-container.is-open {
+    display: block;
   }
   .menu-container.is-open {
     display: block;
     border: 1px solid #ececec;
     z-index: 1;
-    .header-site-nav-tablet {
-      display: block;
-    }
-    .site-nav {
-      display: block;
-      padding-top: 60px;
-      left: 0;
-      bottom: 0;
-      & a {
-        color: var(--primary-text-color);
-        text-decoration: none;
-        font-weight: 500;
-        margin: 0;
-        transition-property: color;
-        transition-duration: 250ms;
-        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-        &:hover,
-        &:focus {
-          color: var(--accent-color);
-        }
-      }
-    }
-
-    .header-mail-tel {
-      display: block;
-      align-items: center;
-      font-weight: 500;
-      list-style: none;
-      padding: 0;
-      margin: 60px 0;
-    }
-    .header-center {
-      display: block;
-      align-items: center;
-    }
-    .link-icons-header:hover .icon-contacts-header,
-    .link-icons-header:focus .icon-contacts-header {
-      fill: var(--accent-color);
-    }
-    .site-nav .item {
-      list-style: none;
-      margin-left: 90px;
-    }
-    .icon-contacts-header {
-      fill: var(--title-text-color);
-      margin-right: 10px;
-      transition-property: fill;
-      transition-duration: 250ms;
-      transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-    }
-    .link-icons-header {
-      color: var(--title-text-color);
-      text-decoration: none;
-      transition-property: color;
-      transition-duration: 250ms;
-      transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-      padding-bottom: 20px;
-      &:hover,
-      &:focus {
-        color: var(--accent-color);
-      }
-    }
+  }
+  .menu-container.is-open .header-site-nav-tablet {
+    display: block;
+  }
+  .menu-container.is-open .site-nav {
+    display: block;
+    padding-top: 60px;
+    left: 0;
+    bottom: 0;
+  }
+  .menu-container.is-open .site-nav a {
+    color: var(--primary-text-color);
+    text-decoration: none;
+    font-weight: 500;
+    margin: 0;
+    transition-property: color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .menu-container.is-open .site-nav a:hover,
+  .menu-container.is-open .site-nav a:focus {
+    color: var(--accent-color);
+  }
+  .menu-container.is-open .header-mail-tel {
+    display: block;
+    align-items: center;
+    font-weight: 500;
+    list-style: none;
+    padding: 0;
+    margin: 60px 0;
+  }
+  .menu-container.is-open .header-center {
+    display: block;
+    align-items: center;
+  }
+  .menu-container.is-open .link-icons-header:hover .icon-contacts-header,
+  .menu-container.is-open .link-icons-header:focus .icon-contacts-header {
+    fill: var(--accent-color);
+  }
+  .menu-container.is-open .site-nav .item {
+    list-style: none;
+    margin-left: 90px;
+  }
+  .menu-container.is-open .icon-contacts-header {
+    fill: var(--title-text-color);
+    margin-right: 10px;
+    transition-property: fill;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .menu-container.is-open .link-icons-header {
+    color: var(--title-text-color);
+    text-decoration: none;
+    transition-property: color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    padding-bottom: 20px;
+  }
+  .menu-container.is-open .link-icons-header:hover,
+  .menu-container.is-open .link-icons-header:focus {
+    color: var(--accent-color);
+  }
+  .site-nav:hover::after,
+  .site-nav:focus::after {
+    width: 100%;
+  }
+  .site-nav .item + .item {
+    margin-left: 40px;
+  }
+  .site-nav .item {
+    list-style: none;
+    margin-left: 90px;
+  }
+  .nav-border.current {
+    color: var(--accent-color);
+  }
+  .current {
+    border-bottom: solid 6px var(--accent-color);
+    padding-bottom: 10px;
+    width: 100%;
   }
 }
+
 @media screen and (min-width: 481px) {
   .menu-button {
     display: none;
   }
 }
-@media screen and (min-width: 3000px) {
+
+@media screen and (min-width: 1200px) {
   .header {
     font-size: 14px;
     line-height: 1.142;
@@ -186,7 +247,6 @@
     display: flex;
     align-items: center;
   }
-
   .site-nav {
     display: initial;
     position: relative;
@@ -195,19 +255,19 @@
     left: 0;
     bottom: 0;
     margin-left: 50px;
-    & a {
-      color: var(--primary-text-color);
-      text-decoration: none;
-      font-weight: 500;
-      margin: 0;
-      transition-property: color;
-      transition-duration: 250ms;
-      transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-      &:hover,
-      &:focus {
-        color: var(--accent-color);
-      }
-    }
+  }
+  .site-nav a {
+    color: var(--primary-text-color);
+    text-decoration: none;
+    font-weight: 500;
+    margin: 0;
+    transition-property: color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .site-nav a:hover,
+  .site-nav a:focus {
+    color: var(--accent-color);
   }
   .site-nav::after {
     content: "";
@@ -224,7 +284,6 @@
   .site-nav:focus::after {
     width: 100%;
   }
-
   .site-nav .item + .item {
     margin-left: 40px;
   }
@@ -232,7 +291,6 @@
     list-style: none;
     margin-left: 90px;
   }
-
   .nav-border.current {
     color: var(--accent-color);
   }
@@ -271,9 +329,9 @@
     transition-property: color;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-    &:hover,
-    &:focus {
-      color: var(--accent-color);
-    }
+  }
+  .link-icons-header:hover,
+  .link-icons-header:focus {
+    color: var(--accent-color);
   }
 }
