--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -20,6 +20,10 @@
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
+  @media screen and (max-width: 480px) {
+    width: 460px;
+    height: 609px;
+  }
 }
 .close-btn {
   display: inline-flex;
@@ -41,7 +45,7 @@
   }
   @media screen and (max-width: 480px) {
     top: 15px;
-    right: 35px;
+    right: 20px;
   }
 }
 
@@ -143,7 +147,7 @@
     width: 200px;
   }
   @media screen and (max-width: 480px) {
-    padding: 40px 80px;
+    padding: 40px 40px;
   }
 }
 
