--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -5,7 +5,7 @@
   margin-right: 0 auto;
 }
 
-@media screen and (min-width: 0px) {
+@media screen and (min-width: 480px) {
   .container {
     max-width: 480px;
     padding-left: 15px;
@@ -14,13 +14,13 @@
     margin-right: auto;
   }
 }
-@media screen and (min-width: 320px) and (max-width: 480px) {
-  .container {
-    margin: 10px 0;
-  }
-}
 
 @media screen and (min-width: 768px) {
+  .container {
+    max-width: 768px;
+  }
+}
+@media screen and(min-width: 1200px) {
   .container {
     max-width: 1200px;
   }
