--- a/sass/components/_section.scss
+++ b/sass/components/_section.scss
@@ -3,8 +3,8 @@ section {
   font-size: 14px;
   line-height: 1.714;
   letter-spacing: 0.03em;
-  padding-top: 45px;
-  padding-bottom: 35px;
+  margin-top: 45px;
+  margin-bottom: 35px;
   & li {
     list-style: none;
   }
@@ -13,8 +13,8 @@ section {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-right: -15px;
-  margin-left: 15px;
+  // margin-right: -15px;
+  // margin-left: 15px;
   @media screen and (max-width: 480px) {
     margin: 0;
   }
@@ -54,9 +54,12 @@ section {
   font-size: 14px;
   line-height: 1.142;
   text-transform: uppercase;
-  padding-top: 30px;
-  padding-bottom: 10px;
+  // padding-top: 30px;
+  // padding-bottom: 10px;
   margin-top: 0;
+  @media screen and (min-width: 1200px) {
+    display: block;
+  }
 }
 .section-title {
   font-weight: 700;
@@ -75,7 +78,7 @@ section {
     letter-spacing: 0.03em;
     color: var(--primary-text-color);
     margin-top: 0;
-    padding-bottom: 50px;
+    margin-bottom: 50px;
   }
 }
 
@@ -86,8 +89,8 @@ section {
     font-size: 14px;
     line-height: 1.714;
     letter-spacing: 0.03em;
-    padding-top: 95px;
-    padding-bottom: 95px;
+    margin-top: 95px;
+    margin-bottom: 95px;
     & li {
       list-style: none;
     }
