--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -45,6 +45,9 @@
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
   margin-bottom: 60px;
+  @media screen and (min-width: 768px) {
+    margin-bottom: 40px;
+  }
 }
 .decoration-no {
   text-decoration: none;
