--- a/sass/layout/_header-page.scss
+++ b/sass/layout/_header-page.scss
@@ -7,9 +7,12 @@
   font-size: 14px;
   line-height: 1.142;
   letter-spacing: 0.02em;
-  padding-top: 5px;
-  padding-bottom: 5px;
+  padding-top: 15px;
+  padding-bottom: 15px;
   border-bottom: 1px solid #ececec;
+  @media screen and (min-width: 768px) {
+    padding: 10px 0 5px 0;
+  }
 }
 
 @media screen and (max-width: 480px) {
@@ -104,7 +107,7 @@
   }
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 768px) {
   .menu-button {
     display: flex;
     width: 40px;
@@ -228,7 +231,7 @@
   }
 }
 
-@media screen and (min-width: 481px) {
+@media screen and (min-width: 768px) {
   .menu-button {
     display: none;
   }
