--- a/sass/components/_section.scss
+++ b/sass/components/_section.scss
@@ -3,18 +3,26 @@ section {
   font-size: 14px;
   line-height: 1.714;
   letter-spacing: 0.03em;
-  margin-top: 45px;
+  // margin-top: 45px;
   margin-bottom: 35px;
   & li {
     list-style: none;
   }
 }
+// @media screen and (min-width: 320px) {
+// .section-margin {
+//   margin-top: 45px;
+// }
 .section-features {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-top: 60px;
   // margin-right: -15px;
   // margin-left: 15px;
+  @media screen and (max-width: 768px) {
+    margin-top: 35px;
+  }
   @media screen and (max-width: 480px) {
     margin: 0;
   }
@@ -54,10 +62,11 @@ section {
   font-size: 14px;
   line-height: 1.142;
   text-transform: uppercase;
+  margin-top: 30px;
+  margin-bottom: 10px;
   // padding-top: 30px;
   // padding-bottom: 10px;
-  margin-top: 0;
-  @media screen and (min-width: 1200px) {
+  @media screen and (min-width: 768px) {
     display: block;
   }
 }
@@ -68,8 +77,8 @@ section {
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--primary-text-color);
-  margin-top: 0;
-  padding-bottom: 50px;
+  padding-top: 94px;
+  margin-bottom: 50px;
   @media screen and (min-width: 1200px) {
     font-weight: 700;
     font-size: 36px;
@@ -89,7 +98,7 @@ section {
     font-size: 14px;
     line-height: 1.714;
     letter-spacing: 0.03em;
-    margin-top: 95px;
+    margin-top: 0;
     margin-bottom: 95px;
     & li {
       list-style: none;
@@ -112,9 +121,10 @@ section {
         font-size: 14px;
         line-height: 1.142;
         text-transform: uppercase;
-        padding-top: 30px;
-        padding-bottom: 10px;
-        margin-top: 0;
+        margin-top: 30px;
+        margin-bottom: 10px;
+        // padding-top: 30px;
+        // padding-bottom: 10px;
       }
       .selection-text {
         width: 270px;
